[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tools"
version = "0.1.0"
description = "Framework-agnostic tools for LLM integrations"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "kamillobinski" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/kamillobinski/llm-tools"
Repository = "https://github.com/kamillobinski/llm-tools"
Issues = "https://github.com/kamillobinski/llm-tools/issues"

[tool.setuptools.packages.find]
include = ["task*", "commons*"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["task/tests"]
addopts = "-v"